--- a/analysis-4.tex
+++ b/analysis-4.tex
@@ -1255,8 +1255,7 @@ of class $C^1$, its exterior differential is $\dd f(x) = Df(x)$.
 	If $\alpha$ is a $C^2$ differential $k$-form, then $\dd(\dd \alpha) = 0$.
 \end{proposition}
 \begin{proof}
-	TODO: lec 16
-
+	TODO: lec 16.
 	proof by example on $k=1, n=3$.
 \end{proof}
 
@@ -1264,5 +1263,138 @@ of class $C^1$, its exterior differential is $\dd f(x) = Df(x)$.
 	Let $F: U \to V$ of class $C^2$ and $\alpha$ a differential $k$-form on $V$.
 	Then $\dd(F^* \alpha) = F^*(\dd \alpha)$.
 \end{proposition}
+
+\begin{proof}
+	skip
+\end{proof}
+
+\begin{definition}{Closed and exact forms}{closed-and-exact-forms}
+	Let $\alpha$ be a differential $k$-form.
+	We say that $\alpha$ is closed if $\dd \alpha = 0$ and we say that it is exact if we can write it
+	as $\alpha = \dd \beta$ for some $(k-1)$-form $\beta$.
+\end{definition}
+
+\begin{theorem}{Poincaré lemma}{poincare-lemma}
+	On a ball $U$, if $k \geq 1$ and $\alpha$ is a closed $k$-form on $U$, then $\alpha$ is exact.
+\end{theorem}
+
+\begin{proof}
+	skip
+\end{proof}
+
+\subsubsection{Integrating over manifolds}
+
+\begin{definition}{Differential $k$-form on a manifold}{differential-k-form-on-a-manifold}
+	A differential $k$-form of on a manifold $M$ is an assignment
+	\begin{equation}
+		x \in M \mapsto \alpha(x) \in \Lambda^k T_x M
+	\end{equation}
+	such that for any $p \in M$ there exists an open set $U$ and a differential $k$-form $\omega$
+	such that $p \in U$ and $\forall x \in M \cap U$ we have
+	\begin{equation}
+		\alpha(x) = \eval{\omega(x)}_{(T_xM \cross \dots \cross T_xM)}
+	\end{equation}
+\end{definition}
+We could also give a simpler definition where we consider $\psi : V \subseteq \R^m \to M$ smooth and
+say that $\psi^* \alpha$ is a differential $k$-form on $V$. These two definitions are equivalent
+when we replace $C^1$ with $C^\infty$ everywhere.
+
+Given an oriented $k$-dimensional manifold $M$ and a parametrization $\psi : V \to M$ we call it an
+\emph{oriented parametrization} if, for all $p \in \psi(V)$, we have that
+$(D \psi(x)^{-1})(\mathcal O_p)$, where $\mathcal O_p$ is the orientation of $T_pM$,
+gives the canonical orientation of $\R^k$.
+This basically tells us which direction our orientation is travelling.
+
+\begin{proposition}{Family of parametrizations of a manifold}{manifold-parametrizations}
+	Let $M$ be a $k$-dimensional manifold. Then there are at most countably many parametrizations
+	$\psi_i: V_i \to U_i$ which cover the whole $M$ and $E_i \subseteq V_i$ Borel sets s.t.
+	$\psi_i(E_i)$ form a partition of $M$.
+
+	Equivalently, there exists (another) countable family of parametrization s.t. $\psi_i(V_i)$ are
+	disjoint and $\mathcal H^k(M \setminus \bigsqcup_{i} \psi_i(V_i)) = 0$.
+
+	Moreover if $M$ is compact then we just need a finite number of parametrizations.
+
+	If $M$ is oriented we can assume that each $\psi_i$ is also oriented.
+\end{proposition}
+
+Note that the Borel subset $E_i$ is almost the same as $V_i$, we are just removing the
+non-measurable parts.
+
+\begin{proof}
+	No proof.
+\end{proof}
+
+\begin{definition}{Integral of a differential form}{integral-of-a-differential-form}
+	Let $\alpha$ be a differential $k$-form on $V \subseteq \R^k$ given by
+	$\alpha(x) = a(x) \dd x_1 \land \dots \land \dd x_k$.
+	Given $E \subseteq V$ Borel we define
+	\begin{equation}
+		\int_E \alpha = \int a(x) \dd x
+	\end{equation}
+	assuming that $\int_E \abs{a} < \infty$.
+\end{definition}
+
+\begin{definition}{Integral over a manifold}{integral-over-a-manifold}
+	Let $\alpha$ be a differential $k$-form on a $k$-dimensional compact and oriented manifold $M$.
+	Let $\psi_i$ be an oriented family of parametrization as in (the first part of)
+	\cref{prop:manifold-parametrizations}
+	\begin{equation}
+		\int_M \alpha = \sum_{i \in I} \int_{E_i} \psi_i^*\alpha
+	\end{equation}
+\end{definition}
+
+We should show that these integrals are well defined but we will skip it.
+We will show instead that the result does not depend on the parametrization of the manifold.
+\begin{lemma}{}{}
+	If we take another family of parametrizations $\tilde \psi_j$ and call $F_i = \psi_i(E_i)$
+	and $\tilde F_j = \tilde \psi_j(\tilde E_j)$, we claim that
+	\begin{equation}
+		\int_{\psi_i^{-1}(F_i \cup \tilde F_j)} \psi^*_i \alpha =
+		\int_{\tilde \psi_i^{-1}(F_i \cup \tilde F_j)} \tilde \psi^*_i \alpha
+	\end{equation}
+\end{lemma}
+
+Once we have proven this claim we can take the sum over $i$ or over $j$ to get the result of the
+first or second family, since the parametrizations cover the whole manifold.
+
+\begin{proof}
+	Let $S = F_i \cap \tilde F_j$, we want to show that
+	$\int_{\psi_i^{-1}(S)} \psi^*_i \alpha = \int_{\tilde \psi_i^{-1}(S)} \tilde \psi^*_i \alpha$ by
+	claiming that this is actually the usual change of variable.
+
+	Let $f = \tilde \psi_i^{-1} \circ \psi_i$ be the diffeomorphism taking $\psi_i^{-1}(S)$ to
+	$\tilde \psi_j^{-1}(S)$. Let $\beta = \tilde \psi_j^* \alpha$.
+	By the chain rule for pullback, and since $\psi_i = \tilde \psi_j \circ f$, we have
+	\begin{equation}
+		\psi_i^* \alpha = f^* (\tilde \psi_j^* \alpha) = f^* \beta
+	\end{equation}
+	then the LHS becomes $\int_{\psi_i^{-1}(S)} f^* \beta$ and the RHS becomes
+	$\int_{f(\psi_i^{-1}(S)} \beta$.
+
+	To conclude we need to show that
+	\begin{equation}
+		f^* \beta (x) = \underbrace{\det (Df(x))}_{>0} \beta(f(x))
+	\end{equation}
+	but this is left as a fucking exercise.
+\end{proof}
+
+\begin{theorem}{Stokes}{stokes}
+	Assume that $m$ is a compact oriented $k$-dimensional manifold with boundary and $\eta$ is a
+	$(k-1)$-form on $M$.
+	Then
+	\begin{equation}
+		\int_{M} \dd \eta = \int_{\partial M} \eta
+	\end{equation}
+\end{theorem}
+
+A manifold with boundary is locally resembling $\R^k$ or a lower half-space of $\R^k$.
+Note that if $\partial M = \varnothing$ we have that $\int_M \dd \eta = 0$.
+
+Moreover, if $\eta$ is exact (i.e. $\eta = \dd \tau$) we have that
+$0 = \int_M \dd(\dd \tau) = \int_{\partial M} \dd \tau = \int_{\partial(\partial M)} \tau = 0$ as
+$\partial(\partial M) = \varnothing$.
+
+TODO: last 5 minutes missing, lec 17?
 
 \end{document}
