preamble_math: add conv and dom

--- a/preamble_math.sty
+++ b/preamble_math.sty
@@ -77,6 +77,9 @@
 \DeclareMathOperator*{\argmax}{arg\,max}
 \DeclareMathOperator*{\argmin}{arg\,min}
 
+\DeclareMathOperator{\dom}{dom}
+\DeclareMathOperator{\conv}{conv}
+
 % *-------------------*
 % | *** Theorems *** |
 % *-------------------*
